--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,68 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+  padding: 20px 0;
+  overflow-y: hidden;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.flex-row {
+  display: flex;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.grid {
+  display: grid;
+}
+.c-25-75 {
+  grid-template-columns: 25fr 75fr;
+}
+
+.border-dashed-r {
+  border-right: 1px dashed;
+}
+
+.border-dashed-b {
+  border-bottom: 1px dashed;
+}
+
+.gap-8 {
+  gap: 8px;
+}
+
+.gap-16 {
+  gap: 16px;
+}
+
+.padding-0-8 {
+  padding: 0px 8px;
+}
+
+.padding-16 {
+  padding: 16px;
+}
+
+.margin-top-16 {
+  margin-top: 16px;
+}
+
+.width-100 {
+  width: 100%;
+  max-width: 100%;
+}
+
+.height-100 {
+  height: 100vh;
+}
+
+.scroll-y {
+  overflow-y: scroll;
+}
