--- a/src/app/features/book-appointment/book-appointment.component.html
+++ b/src/app/features/book-appointment/book-appointment.component.html
@@ -14,6 +14,7 @@
         <app-drag-and-drop [positions]="appointment | position">
           <app-appointment
             [appointment]="appointment"
+            (draggingStarted)="facade.onDraggingStarted()"
             (appointmentDragged)="facade.onAppointmentDrag($event)"
             (appointmentClicked)="facade.onAppointmentClick($event)"
           ></app-appointment>
