--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,8 +30,8 @@ body {
   border-right: 1px dashed;
 }
 
-.border-dashed-b {
-  border-bottom: 1px dashed;
+.border-dashed-t {
+  border-top: 1px dashed;
 }
 
 .gap-8 {
