--- a/src/app/features/book-appointment/components/appointment/appointment.component.html
+++ b/src/app/features/book-appointment/components/appointment/appointment.component.html
@@ -8,7 +8,7 @@
     <mat-card-title>{{ appointment.name }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <p>{{ appointment.startDate + " - " + appointment.endDate }}</p>
+    <p>{{ appointment | appointmentView }}</p>
   </mat-card-content>
 </mat-card>
 }
