--- a/src/app/features/book-appointment/book-appointment.component.html
+++ b/src/app/features/book-appointment/book-appointment.component.html
@@ -10,7 +10,8 @@
     </div>
     <div>
       <app-grid [rowsAmount]="24" [rowHeight]="60">
-        @for (appointment of facade.appointmentsSig(); track $index) {
+        @for (appointment of facade.selectedDateAppointments$ | async; track
+        $index) {
         <app-drag-and-drop [positions]="appointment | position">
           <app-appointment
             [appointment]="appointment"
