--- a/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/shared/components/drag-and-drop/drag-and-drop.component.html
@@ -6,8 +6,8 @@
   (cdkDragStarted)="component.cdkDragStarted()"
   (cdkDragEnded)="component.cdkDragEnded($event, item)"
   [ngStyle]="{
-    height: positions.height + 'px',
-    top: positions.top + 'px'
+    height:positions.height + 'px',
+    top: positions.top + 'px',
   }"
 >
   <div class="content">
