--- a/src/app/features/book-appointment/components/appointment-booking/appointment-booking.component.html
+++ b/src/app/features/book-appointment/components/appointment-booking/appointment-booking.component.html
@@ -22,7 +22,9 @@
     <div></div>
     <div class="flex-row gap-16">
       <button mat-raised-button (click)="onCancel()">Cancel</button>
+      @if(isUpdateSig()){
       <button mat-raised-button (click)="onRemove()">Remove</button>
+      }
       <button mat-raised-button (click)="onSubmit()">Add</button>
     </div>
   </div>
