--- a/src/app/shared/form/input/input.component.html
+++ b/src/app/shared/form/input/input.component.html
@@ -4,6 +4,8 @@
     matInput
     type="text"
     [formControl]="control"
-    [placeholder]="placeHolder"
+    [placeholder]="placeholder"
+    (blur)="this.onTouch()"
   />
+  <mat-error>{{ validationMessage$ | async }}</mat-error>
 </mat-form-field>
